logs/CxxWrap_0.6.log
>>> 'Pkg.add("CxxWrap")' log
INFO: Cloning cache of CxxWrap from https://github.com/JuliaInterop/CxxWrap.jl.git
INFO: Installing BinDeps v0.4.7
INFO: Installing CxxWrap v0.2.3
INFO: Installing SHA v0.3.1
INFO: Installing URIParser v0.1.8
INFO: Building CxxWrap
Found Julia library at /home/vagrant/julia/lib/libjulia.so
INFO: Attempting to Create directory /home/vagrant/.julia/v0.6/CxxWrap/deps/builds/cxx_wrap
INFO: Changing Directory to /home/vagrant/.julia/v0.6/CxxWrap/deps/builds/cxx_wrap
-- The C compiler identification is GNU 4.8.4
-- The CXX compiler identification is GNU 4.8.4
-- Check for working C compiler: /usr/bin/cc
-- Check for working C compiler: /usr/bin/cc -- works
-- Detecting C compiler ABI info
-- Detecting C compiler ABI info - done
-- Check for working CXX compiler: /usr/bin/c++
-- Check for working CXX compiler: /usr/bin/c++ -- works
-- Detecting CXX compiler ABI info
-- Detecting CXX compiler ABI info - done
-- Performing Test COMPILER_HAS_HIDDEN_VISIBILITY
-- Performing Test COMPILER_HAS_HIDDEN_VISIBILITY - Success
-- Performing Test COMPILER_HAS_HIDDEN_INLINE_VISIBILITY
-- Performing Test COMPILER_HAS_HIDDEN_INLINE_VISIBILITY - Success
-- Performing Test COMPILER_HAS_DEPRECATED_ATTR
-- Performing Test COMPILER_HAS_DEPRECATED_ATTR - Success
-- Configuring done
-- Generating done
-- Build files have been written to: /home/vagrant/.julia/v0.6/CxxWrap/deps/builds/cxx_wrap
Scanning dependencies of target cxx_wrap
[ 33%] [ 66%] [100%] Building CXX object CMakeFiles/cxx_wrap.dir/c_interface.cpp.o
Building CXX object CMakeFiles/cxx_wrap.dir/cxx_wrap.cpp.o
Building CXX object CMakeFiles/cxx_wrap.dir/functions.cpp.o
In file included from /home/vagrant/.julia/v0.6/CxxWrap/deps/src/cxx_wrap/cxx_wrap.cpp:1:0:
/home/vagrant/.julia/v0.6/CxxWrap/deps/src/cxx_wrap/cxx_wrap.hpp: In member function ‘cxx_wrap::TypeWrapper<T> cxx_wrap::Module::add_bits(const string&, jl_datatype_t*)’:
/home/vagrant/.julia/v0.6/CxxWrap/deps/src/cxx_wrap/cxx_wrap.hpp:837:103: error: there are no arguments to ‘jl_new_bitstype’ that depend on a template parameter, so a declaration of ‘jl_new_bitstype’ must be available [-fpermissive]
   jl_datatype_t* dt = jl_new_bitstype((jl_value_t*)jl_symbol(name.c_str()), super, params, 8*sizeof(T));
                                                                                                       ^
/home/vagrant/.julia/v0.6/CxxWrap/deps/src/cxx_wrap/cxx_wrap.hpp:837:103: note: (if you use ‘-fpermissive’, G++ will accept your code, but allowing the use of an undeclared name is deprecated)
In file included from /home/vagrant/.julia/v0.6/CxxWrap/deps/src/cxx_wrap/c_interface.cpp:2:0:
/home/vagrant/.julia/v0.6/CxxWrap/deps/src/cxx_wrap/cxx_wrap.hpp: In member function ‘cxx_wrap::TypeWrapper<T> cxx_wrap::Module::add_bits(const string&, jl_datatype_t*)’:
/home/vagrant/.julia/v0.6/CxxWrap/deps/src/cxx_wrap/cxx_wrap.hpp:837:103: error: there are no arguments to ‘jl_new_bitstype’ that depend on a template parameter, so a declaration of ‘jl_new_bitstype’ must be available [-fpermissive]
   jl_datatype_t* dt = jl_new_bitstype((jl_value_t*)jl_symbol(name.c_str()), super, params, 8*sizeof(T));
                                                                                                       ^
/home/vagrant/.julia/v0.6/CxxWrap/deps/src/cxx_wrap/cxx_wrap.hpp:837:103: note: (if you use ‘-fpermissive’, G++ will accept your code, but allowing the use of an undeclared name is deprecated)
make[2]: *** [CMakeFiles/cxx_wrap.dir/cxx_wrap.cpp.o] Error 1
make[2]: *** Waiting for unfinished jobs....
make[2]: *** [CMakeFiles/cxx_wrap.dir/c_interface.cpp.o] Error 1
make[1]: *** [CMakeFiles/cxx_wrap.dir/all] Error 2
make: *** [all] Error 2
===============================[ ERROR: CxxWrap ]===============================

LoadError: failed process: Process(`cmake --build . --config Release --target install -- -j 4`, ProcessExited(2)) [2]
while loading /home/vagrant/.julia/v0.6/CxxWrap/deps/build.jl, in expression starting on line 178

================================================================================

================================[ BUILD ERRORS ]================================

WARNING: CxxWrap had build errors.

 - packages with build errors remain installed in /home/vagrant/.julia/v0.6
 - build the package(s) and all dependencies with `Pkg.build("CxxWrap")`
 - build a single package by running its `deps/build.jl` script

================================================================================
INFO: Package database updated
INFO: METADATA is out-of-date — you may not have the latest version of CxxWrap
INFO: Use `Pkg.update()` to get the latest versions of your packages

>>> 'Pkg.test("CxxWrap")' log
Julia Version 0.6.0-dev.2896
Commit d168287 (2017-02-22 00:17 UTC)
Platform Info:
  OS: Linux (x86_64-pc-linux-gnu)
  CPU: Intel(R) Xeon(R) CPU E3-1241 v3 @ 3.50GHz
  WORD_SIZE: 64
           Ubuntu 14.04.5 LTS
  uname: Linux 3.13.0-109-generic #156-Ubuntu SMP Wed Feb 8 16:09:17 UTC 2017 x86_64 x86_64
Memory: 2.9392738342285156 GB (431.83984375 MB free)
Uptime: 15060.0 sec
Load Avg:  1.072265625  0.912109375  0.744140625
Intel(R) Xeon(R) CPU E3-1241 v3 @ 3.50GHz: 
       speed         user         nice          sys         idle          irq
#1  3492 MHz     743965 s       4918 s      71083 s     532261 s         19 s
#2  3492 MHz     215049 s       1704 s      34000 s    1224607 s          0 s

  BLAS: libopenblas (USE64BITINT DYNAMIC_ARCH NO_AFFINITY Nehalem)
  LAPACK: libopenblas64_
  LIBM: libopenlibm
  LLVM: libLLVM-3.9.1 (ORCJIT, haswell)
Environment:
  TERM = vt100
  LD_LIBRARY_PATH = :/usr/local/lib/
  PATH = /usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/usr/games:/usr/local/games:/home/vagrant/julia/bin/
  JAVA_HOME = /usr/lib/jvm/java-7-oracle
  HOME = /home/vagrant

Package Directory: /home/vagrant/.julia/v0.6
2 required packages:
 - CxxWrap                       0.2.3
 - JSON                          0.8.3
4 additional packages:
 - BinDeps                       0.4.7
 - Compat                        0.19.0
 - SHA                           0.3.1
 - URIParser                     0.1.8
INFO: Testing CxxWrap
running test containers.jl...

WARNING: deprecated syntax "abstract CppAny" at /home/vagrant/.julia/v0.6/CxxWrap/src/CxxWrap.jl:29.
Use "abstract type CppAny end" instead.

WARNING: deprecated syntax "abstract CppBits<:CppAny" at /home/vagrant/.julia/v0.6/CxxWrap/src/CxxWrap.jl:30.
Use "abstract type CppBits<:CppAny end" instead.

WARNING: deprecated syntax "abstract CppDisplay<:Display" at /home/vagrant/.julia/v0.6/CxxWrap/src/CxxWrap.jl:31.
Use "abstract type CppDisplay<:Display end" instead.

WARNING: deprecated syntax "abstract CppArray{T,N}<:AbstractArray{T,N}" at /home/vagrant/.julia/v0.6/CxxWrap/src/CxxWrap.jl:32.
Use "abstract type CppArray{T,N}<:AbstractArray{T,N} end" instead.

WARNING: deprecated syntax "abstract CppAny" at /home/vagrant/.julia/v0.6/CxxWrap/src/CxxWrap.jl:29.
Use "abstract type CppAny end" instead.

WARNING: deprecated syntax "abstract CppBits<:CppAny" at /home/vagrant/.julia/v0.6/CxxWrap/src/CxxWrap.jl:30.
Use "abstract type CppBits<:CppAny end" instead.

WARNING: deprecated syntax "abstract CppDisplay<:Display" at /home/vagrant/.julia/v0.6/CxxWrap/src/CxxWrap.jl:31.
Use "abstract type CppDisplay<:Display end" instead.

WARNING: deprecated syntax "abstract CppArray{T,N}<:AbstractArray{T,N}" at /home/vagrant/.julia/v0.6/CxxWrap/src/CxxWrap.jl:32.
Use "abstract type CppArray{T,N}<:AbstractArray{T,N} end" instead.
ERROR: LoadError: /home/vagrant/.julia/v0.6/CxxWrap/deps/deps.jl not found, CxxWrap did not build properly
Stacktrace:
 [1] error(::String) at ./error.jl:21
 [2] include_from_node1(::String) at ./loading.jl:539
 [3] include(::String) at ./sysimg.jl:14
 [4] anonymous at ./<missing>:2
while loading /home/vagrant/.julia/v0.6/CxxWrap/src/CxxWrap.jl, in expression starting on line 22
ERROR: LoadError: LoadError: Failed to precompile CxxWrap to /home/vagrant/.julia/lib/v0.6/CxxWrap.ji.
Stacktrace:
 [1] compilecache(::String) at ./loading.jl:673
 [2] require(::Symbol) at ./loading.jl:460
 [3] include_from_node1(::String) at ./loading.jl:539
 [4] include(::String) at ./sysimg.jl:14
 [5] macro expansion at /home/vagrant/.julia/v0.6/CxxWrap/test/runtests.jl:14 [inlined]
 [6] anonymous at ./<missing>:?
 [7] include_from_node1(::String) at ./loading.jl:539
 [8] include(::String) at ./sysimg.jl:14
 [9] process_options(::Base.JLOptions) at ./client.jl:305
 [10] _start() at ./client.jl:371
while loading /home/vagrant/.julia/v0.6/CxxWrap/test/containers.jl, in expression starting on line 1
while loading /home/vagrant/.julia/v0.6/CxxWrap/test/runtests.jl, in expression starting on line 11
===============================[ ERROR: CxxWrap ]===============================

failed process: Process(`/home/vagrant/julia/bin/julia -Cx86-64 -J/home/vagrant/julia/lib/julia/sys.so --compile=yes --depwarn=yes --check-bounds=yes --code-coverage=none --color=no --compilecache=yes /home/vagrant/.julia/v0.6/CxxWrap/test/runtests.jl`, ProcessExited(1)) [1]

================================================================================
ERROR: CxxWrap had test errors

>>> End of log
